// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Low-level API > should commit offsets 1`] = `
{
  "tags": {},
  "throttleTimeMs": 0,
  "topics": [
    {
      "name": "kafka-ts-test-topic",
      "partitions": [
        {
          "errorCode": 0,
          "partitionIndex": 0,
          "tags": {},
        },
      ],
      "tags": {},
    },
  ],
}
`;

exports[`Low-level API > should create topics 1`] = `
{
  "tags": {},
  "throttleTimeMs": 0,
  "topics": [
    {
      "_numPartitions": 10,
      "_replicationFactor": 3,
      "_topicId": "Any<UUID>",
      "configs": [
        {
          "configSource": 5,
          "isSensitive": false,
          "name": "cleanup.policy",
          "readOnly": false,
          "tags": {},
          "value": "delete",
        },
        {
          "configSource": 5,
          "isSensitive": false,
          "name": "compression.gzip.level",
          "readOnly": false,
          "tags": {},
          "value": "-1",
        },
        {
          "configSource": 5,
          "isSensitive": false,
          "name": "compression.lz4.level",
          "readOnly": false,
          "tags": {},
          "value": "9",
        },
        {
          "configSource": 5,
          "isSensitive": false,
          "name": "compression.type",
          "readOnly": false,
          "tags": {},
          "value": "producer",
        },
        {
          "configSource": 5,
          "isSensitive": false,
          "name": "compression.zstd.level",
          "readOnly": false,
          "tags": {},
          "value": "3",
        },
        {
          "configSource": 5,
          "isSensitive": false,
          "name": "delete.retention.ms",
          "readOnly": false,
          "tags": {},
          "value": "86400000",
        },
        {
          "configSource": 5,
          "isSensitive": false,
          "name": "file.delete.delay.ms",
          "readOnly": false,
          "tags": {},
          "value": "60000",
        },
        {
          "configSource": 5,
          "isSensitive": false,
          "name": "flush.messages",
          "readOnly": false,
          "tags": {},
          "value": "9223372036854775807",
        },
        {
          "configSource": 5,
          "isSensitive": false,
          "name": "flush.ms",
          "readOnly": false,
          "tags": {},
          "value": "9223372036854775807",
        },
        {
          "configSource": 5,
          "isSensitive": false,
          "name": "follower.replication.throttled.replicas",
          "readOnly": false,
          "tags": {},
          "value": "",
        },
        {
          "configSource": 5,
          "isSensitive": false,
          "name": "index.interval.bytes",
          "readOnly": false,
          "tags": {},
          "value": "4096",
        },
        {
          "configSource": 5,
          "isSensitive": false,
          "name": "leader.replication.throttled.replicas",
          "readOnly": false,
          "tags": {},
          "value": "",
        },
        {
          "configSource": 5,
          "isSensitive": false,
          "name": "local.retention.bytes",
          "readOnly": false,
          "tags": {},
          "value": "-2",
        },
        {
          "configSource": 5,
          "isSensitive": false,
          "name": "local.retention.ms",
          "readOnly": false,
          "tags": {},
          "value": "-2",
        },
        {
          "configSource": 5,
          "isSensitive": false,
          "name": "max.compaction.lag.ms",
          "readOnly": false,
          "tags": {},
          "value": "9223372036854775807",
        },
        {
          "configSource": 5,
          "isSensitive": false,
          "name": "max.message.bytes",
          "readOnly": false,
          "tags": {},
          "value": "1048588",
        },
        {
          "configSource": 5,
          "isSensitive": false,
          "name": "message.timestamp.after.max.ms",
          "readOnly": false,
          "tags": {},
          "value": "3600000",
        },
        {
          "configSource": 5,
          "isSensitive": false,
          "name": "message.timestamp.before.max.ms",
          "readOnly": false,
          "tags": {},
          "value": "9223372036854775807",
        },
        {
          "configSource": 5,
          "isSensitive": false,
          "name": "message.timestamp.type",
          "readOnly": false,
          "tags": {},
          "value": "CreateTime",
        },
        {
          "configSource": 5,
          "isSensitive": false,
          "name": "min.cleanable.dirty.ratio",
          "readOnly": false,
          "tags": {},
          "value": "0.5",
        },
        {
          "configSource": 5,
          "isSensitive": false,
          "name": "min.compaction.lag.ms",
          "readOnly": false,
          "tags": {},
          "value": "0",
        },
        {
          "configSource": 5,
          "isSensitive": false,
          "name": "min.insync.replicas",
          "readOnly": false,
          "tags": {},
          "value": "1",
        },
        {
          "configSource": 5,
          "isSensitive": false,
          "name": "preallocate",
          "readOnly": false,
          "tags": {},
          "value": "false",
        },
        {
          "configSource": 5,
          "isSensitive": false,
          "name": "remote.log.copy.disable",
          "readOnly": false,
          "tags": {},
          "value": "false",
        },
        {
          "configSource": 5,
          "isSensitive": false,
          "name": "remote.log.delete.on.disable",
          "readOnly": false,
          "tags": {},
          "value": "false",
        },
        {
          "configSource": 5,
          "isSensitive": false,
          "name": "remote.storage.enable",
          "readOnly": false,
          "tags": {},
          "value": "false",
        },
        {
          "configSource": 5,
          "isSensitive": false,
          "name": "retention.bytes",
          "readOnly": false,
          "tags": {},
          "value": "-1",
        },
        {
          "configSource": 5,
          "isSensitive": false,
          "name": "retention.ms",
          "readOnly": false,
          "tags": {},
          "value": "604800000",
        },
        {
          "configSource": 5,
          "isSensitive": false,
          "name": "segment.bytes",
          "readOnly": false,
          "tags": {},
          "value": "1073741824",
        },
        {
          "configSource": 5,
          "isSensitive": false,
          "name": "segment.index.bytes",
          "readOnly": false,
          "tags": {},
          "value": "10485760",
        },
        {
          "configSource": 5,
          "isSensitive": false,
          "name": "segment.jitter.ms",
          "readOnly": false,
          "tags": {},
          "value": "0",
        },
        {
          "configSource": 5,
          "isSensitive": false,
          "name": "segment.ms",
          "readOnly": false,
          "tags": {},
          "value": "604800000",
        },
        {
          "configSource": 5,
          "isSensitive": false,
          "name": "unclean.leader.election.enable",
          "readOnly": false,
          "tags": {},
          "value": "false",
        },
      ],
      "errorCode": 0,
      "errorMessage": null,
      "name": "kafka-ts-test-topic",
      "tags": {},
    },
  ],
}
`;

exports[`Low-level API > should delete topics 1`] = `
{
  "responses": [
    {
      "_topicId": "Any<UUID>",
      "errorCode": 0,
      "errorMessage": null,
      "name": "kafka-ts-test-topic",
      "tags": {},
    },
  ],
  "tags": {},
  "throttleTimeMs": 0,
}
`;

exports[`Low-level API > should fail join group request with new memberId 1`] = `
{
  "errorCode": 79,
  "generationId": -1,
  "leader": "",
  "memberId": "Any<UUID>",
  "members": [],
  "protocolName": null,
  "protocolType": null,
  "skipAssignment": false,
  "tags": {},
  "throttleTimeMs": 0,
}
`;

exports[`Low-level API > should fetch messages 1`] = `
{
  "errorCode": 0,
  "responses": [
    {
      "partitions": [
        {
          "abortedTransactions": [],
          "errorCode": 0,
          "highWatermark": 1n,
          "lastStableOffset": 1n,
          "logStartOffset": 0n,
          "partitionIndex": 3,
          "preferredReadReplica": -1,
          "records": [
            {
              "attributes": 0,
              "baseOffset": 0n,
              "baseSequence": 0,
              "baseTimestamp": 0n,
              "batchLength": 88,
              "compression": 0,
              "crc": 0,
              "deleteHorizonMs": null,
              "hasDeleteHorizonMs": false,
              "isControlBatch": false,
              "isTransactional": false,
              "lastOffsetDelta": 0,
              "magic": 2,
              "maxTimestamp": 0n,
              "partitionLeaderEpoch": 0,
              "producerEpoch": 0,
              "producerId": 9n,
              "records": [
                {
                  "attributes": 0,
                  "headers": [
                    {
                      "key": "header-key",
                      "value": "header-value",
                    },
                  ],
                  "key": "key",
                  "offsetDelta": 0,
                  "timestampDelta": 0n,
                  "value": "value",
                },
              ],
              "timestampType": "CreateTime",
            },
          ],
          "tags": {},
        },
      ],
      "tags": {},
      "topicId": "Any<UUID>",
    },
  ],
  "sessionId": 0,
  "tags": {},
  "throttleTimeMs": 0,
}
`;

exports[`Low-level API > should fetch offsets 1`] = `
{
  "groups": [
    {
      "errorCode": 0,
      "groupId": "Any<String>",
      "tags": {},
      "topics": [
        {
          "name": "kafka-ts-test-topic",
          "partitions": [
            {
              "committedLeaderEpoch": 0,
              "committedMetadata": "",
              "committedOffset": 1n,
              "errorCode": 0,
              "partitionIndex": 0,
              "tags": {},
            },
          ],
          "tags": {},
        },
      ],
    },
  ],
  "tags": {},
  "throttleTimeMs": 0,
}
`;

exports[`Low-level API > should find coordinator 1`] = `
{
  "coordinators": [
    {
      "errorCode": 0,
      "errorMessage": "",
      "host": "localhost",
      "key": "Any<String>",
      "nodeId": 1,
      "port": 9093,
      "tags": {},
    },
  ],
  "tags": {},
  "throttleTimeMs": 0,
}
`;

exports[`Low-level API > should heartbeat 1`] = `
{
  "errorCode": 0,
  "tags": {},
  "throttleTimeMs": 0,
}
`;

exports[`Low-level API > should init producer id 1`] = `
{
  "errorCode": 0,
  "producerEpoch": 0,
  "producerId": 0n,
  "tags": {},
  "throttleTimeMs": 0,
}
`;

exports[`Low-level API > should join group 1`] = `
{
  "errorCode": 0,
  "generationId": 1,
  "leader": "Any<UUID>",
  "memberId": "Any<UUID>",
  "members": [
    {
      "groupInstanceId": null,
      "memberId": "Any<UUID>",
      "metadata": {
        "data": [
          0,
          0,
          0,
          0,
          0,
          1,
          0,
          19,
          107,
          97,
          102,
          107,
          97,
          45,
          116,
          115,
          45,
          116,
          101,
          115,
          116,
          45,
          116,
          111,
          112,
          105,
          99,
          0,
          0,
          0,
          0,
        ],
        "type": "Buffer",
      },
      "tags": {},
    },
  ],
  "protocolName": "RoundRobinAssigner",
  "protocolType": "consumer",
  "skipAssignment": false,
  "tags": {},
  "throttleTimeMs": 0,
}
`;

exports[`Low-level API > should leave group 1`] = `
{
  "errorCode": 0,
  "members": [
    {
      "errorCode": 0,
      "groupInstanceId": null,
      "memberId": "Any<UUID>",
      "tags": {},
    },
  ],
  "tags": {},
  "throttleTimeMs": 0,
}
`;

exports[`Low-level API > should produce messages 1`] = `
{
  "responses": [
    {
      "name": "kafka-ts-test-topic",
      "partitionResponses": [
        {
          "baseOffset": 0n,
          "errorCode": 0,
          "errorMessage": null,
          "index": 3,
          "logAppendTime": -1n,
          "logStartOffset": 0n,
          "recordErrors": [],
          "tags": {},
        },
      ],
      "tags": {},
    },
  ],
  "tags": {},
  "throttleTimeMs": 0,
}
`;

exports[`Low-level API > should request api versions 1`] = `
{
  "errorCode": 0,
  "throttleTimeMs": 0,
  "versions": [
    {
      "apiKey": 0,
      "maxVersion": 12,
      "minVersion": 0,
    },
    {
      "apiKey": 1,
      "maxVersion": 17,
      "minVersion": 4,
    },
    {
      "apiKey": 2,
      "maxVersion": 10,
      "minVersion": 1,
    },
    {
      "apiKey": 3,
      "maxVersion": 13,
      "minVersion": 0,
    },
    {
      "apiKey": 8,
      "maxVersion": 9,
      "minVersion": 2,
    },
    {
      "apiKey": 9,
      "maxVersion": 9,
      "minVersion": 1,
    },
    {
      "apiKey": 10,
      "maxVersion": 6,
      "minVersion": 0,
    },
    {
      "apiKey": 11,
      "maxVersion": 9,
      "minVersion": 2,
    },
    {
      "apiKey": 12,
      "maxVersion": 4,
      "minVersion": 0,
    },
    {
      "apiKey": 13,
      "maxVersion": 5,
      "minVersion": 0,
    },
    {
      "apiKey": 14,
      "maxVersion": 5,
      "minVersion": 0,
    },
    {
      "apiKey": 15,
      "maxVersion": 6,
      "minVersion": 0,
    },
    {
      "apiKey": 16,
      "maxVersion": 5,
      "minVersion": 0,
    },
    {
      "apiKey": 17,
      "maxVersion": 1,
      "minVersion": 0,
    },
    {
      "apiKey": 18,
      "maxVersion": 4,
      "minVersion": 0,
    },
    {
      "apiKey": 19,
      "maxVersion": 7,
      "minVersion": 2,
    },
    {
      "apiKey": 20,
      "maxVersion": 6,
      "minVersion": 1,
    },
    {
      "apiKey": 21,
      "maxVersion": 2,
      "minVersion": 0,
    },
    {
      "apiKey": 22,
      "maxVersion": 5,
      "minVersion": 0,
    },
    {
      "apiKey": 23,
      "maxVersion": 4,
      "minVersion": 2,
    },
    {
      "apiKey": 24,
      "maxVersion": 5,
      "minVersion": 0,
    },
    {
      "apiKey": 25,
      "maxVersion": 4,
      "minVersion": 0,
    },
    {
      "apiKey": 26,
      "maxVersion": 5,
      "minVersion": 0,
    },
    {
      "apiKey": 27,
      "maxVersion": 1,
      "minVersion": 1,
    },
    {
      "apiKey": 28,
      "maxVersion": 5,
      "minVersion": 0,
    },
    {
      "apiKey": 29,
      "maxVersion": 3,
      "minVersion": 1,
    },
    {
      "apiKey": 30,
      "maxVersion": 3,
      "minVersion": 1,
    },
    {
      "apiKey": 31,
      "maxVersion": 3,
      "minVersion": 1,
    },
    {
      "apiKey": 32,
      "maxVersion": 4,
      "minVersion": 1,
    },
    {
      "apiKey": 33,
      "maxVersion": 2,
      "minVersion": 0,
    },
    {
      "apiKey": 34,
      "maxVersion": 2,
      "minVersion": 1,
    },
    {
      "apiKey": 35,
      "maxVersion": 4,
      "minVersion": 1,
    },
    {
      "apiKey": 36,
      "maxVersion": 2,
      "minVersion": 0,
    },
    {
      "apiKey": 37,
      "maxVersion": 3,
      "minVersion": 0,
    },
    {
      "apiKey": 38,
      "maxVersion": 3,
      "minVersion": 1,
    },
    {
      "apiKey": 39,
      "maxVersion": 2,
      "minVersion": 1,
    },
    {
      "apiKey": 40,
      "maxVersion": 2,
      "minVersion": 1,
    },
    {
      "apiKey": 41,
      "maxVersion": 3,
      "minVersion": 1,
    },
    {
      "apiKey": 42,
      "maxVersion": 2,
      "minVersion": 0,
    },
    {
      "apiKey": 43,
      "maxVersion": 2,
      "minVersion": 0,
    },
    {
      "apiKey": 44,
      "maxVersion": 1,
      "minVersion": 0,
    },
    {
      "apiKey": 45,
      "maxVersion": 0,
      "minVersion": 0,
    },
    {
      "apiKey": 46,
      "maxVersion": 0,
      "minVersion": 0,
    },
    {
      "apiKey": 47,
      "maxVersion": 0,
      "minVersion": 0,
    },
    {
      "apiKey": 48,
      "maxVersion": 1,
      "minVersion": 0,
    },
    {
      "apiKey": 49,
      "maxVersion": 1,
      "minVersion": 0,
    },
    {
      "apiKey": 50,
      "maxVersion": 0,
      "minVersion": 0,
    },
    {
      "apiKey": 51,
      "maxVersion": 0,
      "minVersion": 0,
    },
    {
      "apiKey": 55,
      "maxVersion": 2,
      "minVersion": 0,
    },
    {
      "apiKey": 57,
      "maxVersion": 2,
      "minVersion": 0,
    },
    {
      "apiKey": 60,
      "maxVersion": 2,
      "minVersion": 0,
    },
    {
      "apiKey": 61,
      "maxVersion": 0,
      "minVersion": 0,
    },
    {
      "apiKey": 64,
      "maxVersion": 0,
      "minVersion": 0,
    },
    {
      "apiKey": 65,
      "maxVersion": 0,
      "minVersion": 0,
    },
    {
      "apiKey": 66,
      "maxVersion": 1,
      "minVersion": 0,
    },
    {
      "apiKey": 68,
      "maxVersion": 1,
      "minVersion": 0,
    },
    {
      "apiKey": 69,
      "maxVersion": 1,
      "minVersion": 0,
    },
    {
      "apiKey": 74,
      "maxVersion": 0,
      "minVersion": 0,
    },
    {
      "apiKey": 75,
      "maxVersion": 0,
      "minVersion": 0,
    },
    {
      "apiKey": 80,
      "maxVersion": 0,
      "minVersion": 0,
    },
    {
      "apiKey": 81,
      "maxVersion": 0,
      "minVersion": 0,
    },
  ],
}
`;

exports[`Low-level API > should request metadata for a topic 1`] = `
{
  "brokers": [
    {
      "host": "localhost",
      "nodeId": 0,
      "port": 39092,
      "rack": null,
      "tags": {},
    },
    {
      "host": "localhost",
      "nodeId": 1,
      "port": 39093,
      "rack": null,
      "tags": {},
    },
    {
      "host": "localhost",
      "nodeId": 2,
      "port": 39094,
      "rack": null,
      "tags": {},
    },
  ],
  "clusterId": "4L6g3nShT-eMCtK--X86sw",
  "controllerId": 0,
  "tags": {},
  "throttleTimeMs": 0,
  "topics": [
    {
      "errorCode": 0,
      "isInternal": false,
      "name": "kafka-ts-test-topic",
      "partitions": [
        {
          "errorCode": 0,
          "isrNodes": [
            0,
          ],
          "leaderEpoch": 0,
          "leaderId": 0,
          "offlineReplicas": [],
          "partitionIndex": 3,
          "replicaNodes": [
            0,
          ],
          "tags": {},
        },
        {
          "errorCode": 0,
          "isrNodes": [
            0,
          ],
          "leaderEpoch": 0,
          "leaderId": 0,
          "offlineReplicas": [],
          "partitionIndex": 6,
          "replicaNodes": [
            0,
          ],
          "tags": {},
        },
        {
          "errorCode": 0,
          "isrNodes": [
            0,
          ],
          "leaderEpoch": 0,
          "leaderId": 0,
          "offlineReplicas": [],
          "partitionIndex": 0,
          "replicaNodes": [
            0,
          ],
          "tags": {},
        },
        {
          "errorCode": 0,
          "isrNodes": [
            0,
          ],
          "leaderEpoch": 0,
          "leaderId": 0,
          "offlineReplicas": [],
          "partitionIndex": 2,
          "replicaNodes": [
            0,
          ],
          "tags": {},
        },
        {
          "errorCode": 0,
          "isrNodes": [
            0,
          ],
          "leaderEpoch": 0,
          "leaderId": 0,
          "offlineReplicas": [],
          "partitionIndex": 7,
          "replicaNodes": [
            0,
          ],
          "tags": {},
        },
        {
          "errorCode": 0,
          "isrNodes": [
            0,
          ],
          "leaderEpoch": 0,
          "leaderId": 0,
          "offlineReplicas": [],
          "partitionIndex": 1,
          "replicaNodes": [
            0,
          ],
          "tags": {},
        },
        {
          "errorCode": 0,
          "isrNodes": [
            0,
          ],
          "leaderEpoch": 0,
          "leaderId": 0,
          "offlineReplicas": [],
          "partitionIndex": 8,
          "replicaNodes": [
            0,
          ],
          "tags": {},
        },
        {
          "errorCode": 0,
          "isrNodes": [
            0,
          ],
          "leaderEpoch": 0,
          "leaderId": 0,
          "offlineReplicas": [],
          "partitionIndex": 9,
          "replicaNodes": [
            0,
          ],
          "tags": {},
        },
        {
          "errorCode": 0,
          "isrNodes": [
            0,
          ],
          "leaderEpoch": 0,
          "leaderId": 0,
          "offlineReplicas": [],
          "partitionIndex": 4,
          "replicaNodes": [
            0,
          ],
          "tags": {},
        },
        {
          "errorCode": 0,
          "isrNodes": [
            0,
          ],
          "leaderEpoch": 0,
          "leaderId": 0,
          "offlineReplicas": [],
          "partitionIndex": 5,
          "replicaNodes": [
            0,
          ],
          "tags": {},
        },
      ],
      "tags": {},
      "topicAuthorizedOperations": -2147483648,
      "topicId": "Any<UUID>",
    },
  ],
}
`;

exports[`Low-level API > should request metadata for all topics 1`] = `
{
  "brokers": [
    {
      "host": "localhost",
      "nodeId": 0,
      "port": 39092,
      "rack": null,
      "tags": {},
    },
    {
      "host": "localhost",
      "nodeId": 1,
      "port": 39093,
      "rack": null,
      "tags": {},
    },
    {
      "host": "localhost",
      "nodeId": 2,
      "port": 39094,
      "rack": null,
      "tags": {},
    },
  ],
  "clusterId": "4L6g3nShT-eMCtK--X86sw",
  "controllerId": 0,
  "tags": {},
  "throttleTimeMs": 0,
  "topics": [
    {
      "errorCode": 0,
      "isInternal": false,
      "name": "kafka-ts-test-topic",
      "partitions": [
        {
          "errorCode": 0,
          "isrNodes": [
            0,
          ],
          "leaderEpoch": 0,
          "leaderId": 0,
          "offlineReplicas": [],
          "partitionIndex": 3,
          "replicaNodes": [
            0,
          ],
          "tags": {},
        },
        {
          "errorCode": 0,
          "isrNodes": [
            0,
          ],
          "leaderEpoch": 0,
          "leaderId": 0,
          "offlineReplicas": [],
          "partitionIndex": 6,
          "replicaNodes": [
            0,
          ],
          "tags": {},
        },
        {
          "errorCode": 0,
          "isrNodes": [
            0,
          ],
          "leaderEpoch": 0,
          "leaderId": 0,
          "offlineReplicas": [],
          "partitionIndex": 0,
          "replicaNodes": [
            0,
          ],
          "tags": {},
        },
        {
          "errorCode": 0,
          "isrNodes": [
            0,
          ],
          "leaderEpoch": 0,
          "leaderId": 0,
          "offlineReplicas": [],
          "partitionIndex": 2,
          "replicaNodes": [
            0,
          ],
          "tags": {},
        },
        {
          "errorCode": 0,
          "isrNodes": [
            0,
          ],
          "leaderEpoch": 0,
          "leaderId": 0,
          "offlineReplicas": [],
          "partitionIndex": 7,
          "replicaNodes": [
            0,
          ],
          "tags": {},
        },
        {
          "errorCode": 0,
          "isrNodes": [
            0,
          ],
          "leaderEpoch": 0,
          "leaderId": 0,
          "offlineReplicas": [],
          "partitionIndex": 1,
          "replicaNodes": [
            0,
          ],
          "tags": {},
        },
        {
          "errorCode": 0,
          "isrNodes": [
            0,
          ],
          "leaderEpoch": 0,
          "leaderId": 0,
          "offlineReplicas": [],
          "partitionIndex": 8,
          "replicaNodes": [
            0,
          ],
          "tags": {},
        },
        {
          "errorCode": 0,
          "isrNodes": [
            0,
          ],
          "leaderEpoch": 0,
          "leaderId": 0,
          "offlineReplicas": [],
          "partitionIndex": 9,
          "replicaNodes": [
            0,
          ],
          "tags": {},
        },
        {
          "errorCode": 0,
          "isrNodes": [
            0,
          ],
          "leaderEpoch": 0,
          "leaderId": 0,
          "offlineReplicas": [],
          "partitionIndex": 4,
          "replicaNodes": [
            0,
          ],
          "tags": {},
        },
        {
          "errorCode": 0,
          "isrNodes": [
            0,
          ],
          "leaderEpoch": 0,
          "leaderId": 0,
          "offlineReplicas": [],
          "partitionIndex": 5,
          "replicaNodes": [
            0,
          ],
          "tags": {},
        },
      ],
      "tags": {},
      "topicAuthorizedOperations": -2147483648,
      "topicId": "Any<UUID>",
    },
  ],
}
`;

exports[`Low-level API > should sync group 1`] = `
{
  "assignments": {
    "kafka-test-topic": [
      0,
    ],
  },
  "errorCode": 0,
  "protocolName": "RoundRobinAssigner",
  "protocolType": "consumer",
  "tags": {},
  "throttleTimeMs": 0,
}
`;
